fix white space

--- a/frontend/src/components/ChatInterface.css
+++ b/frontend/src/components/ChatInterface.css
@@ -9,13 +9,13 @@
     transform: translate(-70%, -50%);
     padding: 2.5%;
     height: 70%;
-    width: 55%;
+    width: 60%;
     justify-content: flex-end;
 }
 
 /* Chat whole */
 .chat-interface {
-    width: 50%;
+    width: 60%;
     display: flex;
     flex-direction: column;
     height: 100%;
@@ -45,6 +45,7 @@
 .user-message-container{
     /* padding = white space above user text */
     padding-top: 10px;
+    padding-bottom: 10px;
     display: flex;
     justify-content: flex-end;
 }
